update bug fix placeholder not open in mobile

--- a/user-detail-student.html
+++ b/user-detail-student.html
@@ -163,13 +163,21 @@
       font-size: 16px;
       border: 2px solid #e0e0e0;
       border-radius: 12px;
-      /* outline: none; */
-      /* transition: border-color 0.3s ease; */
       background-color: #f8f9fa;
+    }
 
-      /* nambahanin ini agar tampilan mobile diberbagai browser compatible */
-      appearance: none;
-      -webkit-appearance: none;
+    /* wrapper supaya posisi tetap */
+    .date-wrapper {
+      position: relative;
+    }
+
+    /* jangan gunakan display:none — mobile tidak bisa klik */
+    .real-date {
+      position: absolute;
+      inset: 0;
+      opacity: 0;
+      visibility: hidden;
+      pointer-events: none;
     }
 
     /* ini juga ditambahkan agar tampilan mobile diberbagai browser compatible */
@@ -600,7 +608,7 @@
               </div>
             </div>
 
-            <div class="form-group">
+            <div class="form-group date-wrapper">
               <input
                 type="text"
                 id="dob"
@@ -609,8 +617,8 @@
                 readonly
               />
 
-              <!-- real date input, hidden -->
-              <input type="date" id="realDate" style="display: none" />
+              <!-- real date input, hidden but still clickable -->
+              <input type="date" id="realDate" class="real-date" />
             </div>
 
             <div class="form-group">
@@ -635,12 +643,16 @@
     ></script>
     <script>
       const dob = document.getElementById("dob");
-      const realDate = document.getElementById("realDate");
+      const real = document.getElementById("realDate");
 
-      dob.addEventListener("click", () => realDate.showPicker());
+      dob.addEventListener("click", () => {
+        real.focus();
+        real.showPicker(); // berfungsi di mobile Safari & Chrome
+      });
 
-      realDate.addEventListener("change", () => {
-        const [y, m, d] = realDate.value.split("-");
+      real.addEventListener("change", () => {
+        if (!real.value) return;
+        const [y, m, d] = real.value.split("-");
         dob.value = `${d}/${m}/${y}`;
       });
     </script>
